name:                HaskellAsteroids
version:             0.1.0.0
synopsis:            Implementation of asteroids in haskell.
description:         Please see README.md
homepage:            http://github.com/bombpersons/HaskellAsteroids
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          blindrabbits@gmail.com
copyright:           2016 Bombpersons
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable HaskellAsteroids
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , SFML
